force-app/main/default/objects/Contact/fields/MobilePrefixed__c.field-meta.xml
<CustomField>
    <fullName>MobilePrefixed__c</fullName>
    <formula>IF ( BEGINS( MobilePhone, &quot;04&quot;), &quot;61&quot; &amp; 
RIGHT(MobilePhone,  (LEN(MobilePhone)-1) ) ,
IF( BEGINS( MobilePhone, &quot;02&quot;), 
 &quot;64&quot; &amp; RIGHT(MobilePhone,  (LEN(MobilePhone)-1) ),&quot;Unknown&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobilePrefixed</label>
    <type>Text</type>
</CustomField>