force-app/main/default/objects/Contact/fields/Sync_To_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to control whether this record should be synced over to Marketing Cloud.</description>
    <label>Sync To MC</label>
    <type>Checkbox</type>
</CustomField>